force-app/main/default/objects/AvaliacaoDesempenho__c/AvaliacaoDesempenho__c.object-meta.xml
<CustomObject>
    <label>Avaliação de desempenho</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avaliações de desempenho</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>