force-app/main/default/objects/AvaliacaoDesempenho__c/fields/Avaliacao__c.field-meta.xml
<CustomField>
    <fullName>Avaliacao__c</fullName>
    <label>Avaliação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1ª Avaliação</fullName>
            </value>
            <value>
                <fullName>2ª Avaliação</fullName>
            </value>
            <value>
                <fullName>3ª Avaliação</fullName>
            </value>
            <value>
                <fullName>4ª Avaliação</fullName>
                <isActive>false</isActive>
                <label>4ª Avaliação</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>