force-app/main/default/objects/AvaliacaoDesempenho__c/fields/Competencia__c.field-meta.xml
<CustomField>
    <fullName>Competencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competência</label>
    <referenceTo>Competencia__c</referenceTo>
    <relationshipLabel>Avaliações de desempenho</relationshipLabel>
    <relationshipName>AvaliacaoDesempenho</relationshipName>
    <type>Lookup</type>
</CustomField>