force-app/main/default/objects/AvaliacaoDesempenho__c/fields/NivelAprendizagem__c.field-meta.xml
<CustomField>
    <fullName>NivelAprendizagem__c</fullName>
    <label>Nível de aprendizagem</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TipoAvaliacao__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não executa</fullName>
            </value>
            <value>
                <fullName>Executa com dificuldade</fullName>
            </value>
            <value>
                <fullName>Executa</fullName>
            </value>
            <value>
                <fullName>Executa com fluência</fullName>
            </value>
            <value>
                <fullName>Nunca</fullName>
            </value>
            <value>
                <fullName>Ás vezes</fullName>
            </value>
            <value>
                <fullName>Frequentemente</fullName>
            </value>
            <value>
                <fullName>Sempre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>