force-app/main/default/objects/AvaliacaoDesempenho__c/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <formula>CASE(NivelAprendizagem__c ,&quot;Não Executa&quot;,0 , &quot;Executa com dificuldade&quot;, 1,&quot;Executa&quot;,2,&quot;Executa com fluência&quot;, 3,
												                       &quot;Nunca&quot;,0 , &quot;Ás vezes&quot;, 1,&quot;Frequentemente&quot;,2,&quot;Sempre&quot;,3, -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>